# arrled

./: README.md  platformio.ini
driver/: Cargo.toml  shell.nix
driver/src/: config.rs  effect.rs  magic.rs  main.rs
src/: config.hpp  main.cpp
