[package]
name = "driver"
version = "0.1.0"
authors = ["Ron B <me@ronthecookie.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4"
error = "0.1.9"
rgb = "0.8.20"
rand = "0.7.3"
icmp = "0.3.0"
libmedium = "0.3.0"
